Fix content width on mobile

--- a/thesquirrel/scss/footer.scss
+++ b/thesquirrel/scss/footer.scss
@@ -60,6 +60,7 @@ body {
     .content {
         flex: 1;
         width: 100%;
+        box-sizing: border-box;
     }
 }
 
